syntax = "proto3";

package dogdata;

enum CustomType {
    ROAR = 0;
    DOG = 1;
    CAT = 2;
}